--- a/frontend/src/assets/sass/layout/_landing.scss
+++ b/frontend/src/assets/sass/layout/_landing.scss
@@ -24,7 +24,7 @@
                 vertical-align: middle;
                 width: 200px;
                 height: 30px;
-                background: url("../images/logo.png") top left no-repeat;
+                background: url("../images/logo.jpg") top left no-repeat;
             }
             
             #menu {
@@ -459,7 +459,7 @@
         .header {
             .header-top {
                 .logo {
-                    background: url("../images/logo2x.png") top left no-repeat;
+                    background: url("../images/logo2x.jpg") top left no-repeat;
                     background-size: 200px 30px;
                 }
             }
