--- a/frontend/src/assets/sass/layout/_main.scss
+++ b/frontend/src/assets/sass/layout/_main.scss
@@ -44,7 +44,7 @@ body {
             vertical-align: middle;
             width: 200px;
             height: 30px;
-            background: url("../images/logo2x.png") top left no-repeat;
+            background: url("../images/logo2x.jpg") top left no-repeat;
             background-size: 200px 30px;
         }
         
