--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
@@ -15,25 +15,25 @@
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="sigla" [(ngModel)]="unidadeHospitalar.sigla" pInputText/>
+              <input type="text" name="sigla" [(ngModel)]="unidadeHospitalar.sigla" pInputText required/>
               <label>Sigla</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="nome" [(ngModel)]="unidadeHospitalar.nome" pInputText/>
+              <input type="text" name="nome" [(ngModel)]="unidadeHospitalar.nome" pInputText required/>
               <label>Nome</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="cnpj" [(ngModel)]="unidadeHospitalar.cnpj" pInputText/>
+              <input type="text" name="cnpj" [(ngModel)]="unidadeHospitalar.cnpj" pInputText required/>
               <label>Cnpj</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="endereco" [(ngModel)]="unidadeHospitalar.endereco" pInputText/>
+              <input type="text" name="endereco" [(ngModel)]="unidadeHospitalar.endereco" pInputText required/>
               <label>Endereco</label>
             </span>
           </div>
