--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
@@ -1,17 +1,18 @@
 <div class="ui-g ui-fluid">
   <div class="ui-g-12">
     <div class="card card-w-title">
-      <h1>Unidade Hospitalars</h1>
+      <h1>Unidade Hospitalares</h1>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-4">
             <span class="md-inputfield">
-              <input type="text" pInputText class="ui-inputtext" #filter/>
+              <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
+              (keyup.enter)="datatable.refresh(elasticQuery.query)" />
               <label>Filtro</label>
             </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(filter.value)"></button>
+            <button pButton type="button" label="Pesquisar" icon="ui-icon-search"  (click)="datatable.refresh(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Cadastrar" routerLink="/unidadeHospitalar/new" icon="ui-icon-add"></button>
