--- a/frontend/src/app/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro.component.html
@@ -5,13 +5,15 @@
       <div class="ui-g">
         <div class="ui-g-12 ui-md-4">
             <span class="md-inputfield">
-              <input type="text" pInputText class="ui-inputtext" #filter/>
+              <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
+                (keyup.enter)="datatable.refresh(elasticQuery.query)" />
+
               <label>Filtro</label>
             </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(filter.value)"></button>
+            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Cadastrar" routerLink="/preCadastro/new" icon="ui-icon-add"></button>
