--- a/frontend/src/assets/layout/css/layout-teal.css
+++ b/frontend/src/assets/layout/css/layout-teal.css
@@ -939,14 +939,14 @@ body {
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
   .layout-container .topbar .logo {
     display: inline-block;
-    vertical-align: middle; /*voltar aqui*/
+    vertical-align: middle; /*voltar aqui*/ 
     width: 100%;
     height: 100%;
-    background: url("../images/logo2x.jpg") top left no-repeat;
-    background-size: 200px 100px; }
+    background: url("../images/logo2x.jpg") top center no-repeat;
+    background-size: 175px 75px; }
   .layout-container .topbar .topbar-left {
     box-sizing: border-box;
-    padding: 20px;
+    padding: auto;
     height: 75px;
     width: 250px;
     background-color: #00695C;
