--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -23,7 +23,7 @@
           (buttonClick)="datatableClick($event)" #datatable>
           <p-column header="Nome" field="nome"></p-column>
           <p-column header="Login" field="login"></p-column>
-          <p-column header="Senha" field="senha"></p-column>
+          <p-column header="Senha" field="senha" type="password"></p-column>
           <p-column header="Email" field="email"></p-column>
           <p-column header="Perfil" field="perfil"></p-column>
           <p-column header="Unidade De Saude" field="unidade_de_saude"></p-column>
