BASIS-37210 alteração em usuario.component.html

--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid">
   <div class="ui-g-12">
     <div class="card card-w-title">
-      <h1>Usuarios</h1>
+      <h1>Usuários</h1>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-4">
             <span class="md-inputfield">
@@ -23,10 +23,10 @@
           (buttonClick)="datatableClick($event)" #datatable>
           <p-column header="Nome" field="nome"></p-column>
           <p-column header="Login" field="login"></p-column>
-          <p-column header="Senha" field="senha" type="password"></p-column>
+          <p-column header="Senha" field="senha"></p-column>
           <p-column header="Email" field="email"></p-column>
           <p-column header="Perfil" field="perfil"></p-column>
-          <p-column header="Unidade De Saude" field="unidade_de_saude"></p-column>
+          <p-column header="Unidade de Saude" field="unidade_de_saude"></p-column>
           <p-column header="Ativo" field="ativo">
             <ng-template let-col let-ativo="rowData" pTemplate="body">
               {{ ativo[col.field] ? 'Sim' : (ativo[col.field] != null ? 'Não' : null) }}
