BASIS-37213 - Ajustes na busca e validação

--- a/frontend/src/app/pre-cadastro/pre-cadastro-detail.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro-detail.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid" *ngIf="preCadastro">
   <div class="ui-g-12">
     <div class="card card-w-title">
-      <h1>Visualizar Pre Cadastro</h1>
+      <h1>Visualizar Pré Cadastro</h1>
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
@@ -18,7 +18,7 @@
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="nome_da_mae" pInputText [ngModel]="preCadastro.nome_da_mae" readonly/>
-            <label>Nome Da Mae</label>
+            <label>Nome Da Mãe</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
@@ -30,7 +30,7 @@
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="n_cartao_sus" pInputText [ngModel]="preCadastro.n_cartao_sus" readonly/>
-            <label>N Cartao Sus</label>
+            <label>Número do Cartão do SUS</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
