--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -29,7 +29,7 @@
               <label>Email</label>
             </span>
           </div>
-          <div class="ui-g-12 ui-md-6">
+          <!-- <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
               <input type="text" name="perfil" [(ngModel)]="usuario.perfil" pInputText/>
               <label>Perfil</label>
@@ -40,7 +40,7 @@
               <input type="text" name="unidade_de_saude" [(ngModel)]="usuario.unidade_de_saude" pInputText required/>
               <label>Unidade De Saude</label>
             </span>
-          </div>
+          </div> -->
           <div class="ui-g-12 ui-md-6">
               <div class="ui-g">
                 <div class="ui-g-12 ui-md-2">
@@ -53,6 +53,18 @@
                 <p-radioButton name="ativo" [value]="false" label="Não" [(ngModel)]="usuario.ativo"></p-radioButton>
               </div>
             </div>
+          </div>
+          <div class="ui-g-12 ui-md-6">
+            <span class="md-inputfield">
+              <input type="multiSelect" name="perfil" [(ngModel)]="usuario.perfil" pInputText/>
+              <label>Perfil</label>
+            </span>
+          </div>
+          <div class="ui-g-12 ui-md-6">
+            <span class="md-inputfield">
+              <input type="text" name="unidade_de_saude" [(ngModel)]="usuario.unidade_de_saude" pInputText required/>
+              <label>Unidade De Saude</label>
+            </span>
           </div>
         </div>
         <div class="ui-g">
