Revert "BASIS-37210 Alterações Front e Back - não estável"
This reverts commit 33a96b8068d4a4430779c3baf59b7e7b318d1e30.

--- a/frontend/src/app/usuario/usuario-detail.component.html
+++ b/frontend/src/app/usuario/usuario-detail.component.html
@@ -15,12 +15,12 @@
             <label>Login</label>
           </span>
         </div>
-        <!-- <div class="ui-g-12 ui-md-6">
+        <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="password" name="senha" pInputText [ngModel]="usuario.senha" readonly/>
             <label>Senha</label>
           </span>
-        </div> -->
+        </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="email" pInputText [ngModel]="usuario.email" readonly/>
