--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
@@ -7,11 +7,20 @@
           <input type="hidden" name="id" pInputText [(ngModel)]="unidadeHospitalar.id" readonly/>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="hidden" name="logo" [(ngModel)]="unidadeHospitalar.logo"/>
-              <input type="file" class="form-control" name="logoContentType" id="field_logoContentType"
-                  [(ngModel)]="unidadeHospitalar.logoContentType" />
-            </span>
+       
+    
+              <h3 class="first">Logo</h3>
+              <p-fileUpload name="logo" url="" (onUpload)="onUpload($event)" 
+                      accept="image/*" maxFileSize="1000000">
+                  <ng-template pTemplate="content">
+                      <ul *ngIf="uploadedFiles.length">
+                          <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+                      </ul>
+                  </ng-template>        
+              </p-fileUpload>
+                </span>
           </div>
+          <div class="ui-g-12 ui-md-6"></div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
               <input type="text" name="sigla" [(ngModel)]="unidadeHospitalar.sigla" pInputText maxlength="10" required/>
