BASIS-37209 Bota exportacao

--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
@@ -1,6 +1,9 @@
 <div class="ui-g ui-fluid">
   <div class="ui-g-12">
     <div class="card card-w-title">
+       
+       
+       
       <h1>Unidade Hospitalares</h1>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-4">
@@ -31,7 +34,10 @@
             </ng-template>
           </p-column>
         </basis-datatable>
+        <app-botoes-exportacao resourceName="Exportar">
+        </app-botoes-exportacao>
       </div>
+      
     </div>
   </div>
 </div>
