BASIS-37210 - Botão exportação

--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -30,7 +30,9 @@
               {{ ativo[col.field] ? 'Sim' : (ativo[col.field] != null ? 'Não' : null) }}
             </ng-template>
           </p-column>
+          
         </basis-datatable>
+        <app-botoes-exportacao resourceName="Exportar"></app-botoes-exportacao>
       </div>
     </div>
   </div>
