BASIS-37209 Botao exportacao geral

--- a/frontend/src/app/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro.component.html
@@ -36,6 +36,8 @@
             </ng-template>
           </p-column>
         </basis-datatable>
+        <app-botoes-exportacao resourceName="Exportar">
+        </app-botoes-exportacao>
       </div>
     </div>
   </div>
