--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -31,6 +31,8 @@
             </ng-template>
           </p-column>
         </basis-datatable>
+        <app-botoes-exportacao resourceName="Exportar">
+        </app-botoes-exportacao>
       </div>
     </div>
   </div>
