BASIS-37210 Alteração em incluir e no correção no usuario.module.ts

--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -19,7 +19,7 @@
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="senha" [(ngModel)]="usuario.senha" pInputText required minlength="4"/>
+              <input type="password" name="senha" [(ngModel)]="usuario.senha" pInputText required minlength="4"/>
               <label>Senha</label>
             </span>
           </div>
