--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -3,22 +3,25 @@
     <div class="card card-w-title">
       <h1>Usuários</h1>
       <div class="ui-g">
-        <div class="ui-g-12 ui-md-4">
+        <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
               <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
                 (keyup.enter)="datatable.refresh(elasticQuery.query)" />
               
-              <label>Filtro</label>
+              <label>Pesquisar</label>
             </span>
         </div>
+        <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
+          
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Cadastrar" routerLink="/usuario/new" icon="ui-icon-add"></button>
-          </div>
+          </div>  
         </div>
+        <div class="ui-g-12 ui-md-3"></div>
         <basis-datatable [url]="searchUrl" 
           (buttonClick)="datatableClick($event)" #datatable>
           <p-column header="Nome" field="nome"></p-column>
