--- a/frontend/src/app/usuario/usuario.component.html
+++ b/frontend/src/app/usuario/usuario.component.html
@@ -13,7 +13,6 @@
         </div>
         <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
-          
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(elasticQuery.query)"></button>
           </div>
@@ -33,9 +32,10 @@
               {{ ativo[col.field] ? 'Sim' : (ativo[col.field] != null ? 'Não' : null) }}
             </ng-template>
           </p-column>
-          
         </basis-datatable>
-        <app-botoes-exportacao resourceName="Exportar"></app-botoes-exportacao>
+        <div class="ui-g-6 ui-md-2">
+          <app-botoes-exportacao resourceName="Exportar"></app-botoes-exportacao>
+        </div>
       </div>
     </div>
   </div>
