BASIS-37210 Alteração frontend unidadehospitalar

--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
@@ -6,13 +6,14 @@
        
       <h1>Unidade Hospitalares</h1>
       <div class="ui-g">
-        <div class="ui-g-12 ui-md-4">
+        <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
               <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
               (keyup.enter)="datatable.refresh(elasticQuery.query)" />
-              <label>Filtro</label>
+              <label>Pesquisar</label>
             </span>
         </div>
+        <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Pesquisar" icon="ui-icon-search"  (click)="datatable.refresh(elasticQuery.query)"></button>
@@ -21,6 +22,7 @@
             <button pButton type="button" label="Cadastrar" routerLink="/unidadeHospitalar/new" icon="ui-icon-add"></button>
           </div>
         </div>
+        <div class="ui-g-12 ui-md-3"></div>
         <basis-datatable [url]="searchUrl" 
           (buttonClick)="datatableClick($event)" #datatable>
           <p-column header="Logo" field="logo"></p-column>
@@ -34,8 +36,9 @@
             </ng-template>
           </p-column>
         </basis-datatable>
-        <app-botoes-exportacao resourceName="Exportar">
-        </app-botoes-exportacao>
+        <div class="ui-g-12 ui-md-2">
+          <app-botoes-exportacao resourceName="Exportar"></app-botoes-exportacao>
+        </div>
       </div>
       
     </div>
