--- a/frontend/src/app/pre-cadastro/pre-cadastro-form.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro-form.component.html
@@ -1,63 +1,63 @@
 <div class="ui-g ui-fluid">
-  <div class="ui-g-12">
-    <div class="card card-w-title">
-      <h1>{{ preCadastro.id ? 'Editar Pre Cadastro' : 'Cadastrar Pre Cadastro' }}</h1>
-      <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-        <div class="ui-g form-group">
-          <input type="hidden" name="id" pInputText [(ngModel)]="preCadastro.id" readonly/>
-          <div class="ui-g-12 ui-md-6">
-            <span class="md-inputfield">
-              <input type="text" name="nome_do_paciente" required [(ngModel)]="preCadastro.nome_do_paciente" pInputText/>
+    <div class="ui-g-12">
+        <div class="card card-w-title">
+            <h1>{{ preCadastro.id ? 'Editar Pre Cadastro' : 'Cadastrar Pre Cadastro' }}</h1>
+            <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+                <div class="ui-g form-group">
+                    <input type="hidden" name="id" pInputText [(ngModel)]="preCadastro.id" readonly/>
+                    <div class="ui-g-12 ui-md-6">
+                        <span class="md-inputfield">
+              <input type="text" name="nome_do_paciente" required [(ngModel)]="preCadastro.nomeDoPaciente" pInputText/>
               <label>Nome Do Paciente</label>
             </span>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <span class="md-inputfield">
-              <input type="text" name="nome_social" [(ngModel)]="preCadastro.nome_social" pInputText/>
+                    </div>
+                    <div class="ui-g-12 ui-md-6">
+                        <span class="md-inputfield">
+              <input type="text" name="nome_social" [(ngModel)]="preCadastro.nomeSocial" pInputText/>
               <label>Nome Social</label>
             </span>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <span class="md-inputfield">
-              <input type="text" name="nome_da_mae" required [(ngModel)]="preCadastro.nome_da_mae" pInputText/>
+                    </div>
+                    <div class="ui-g-12 ui-md-6">
+                        <span class="md-inputfield">
+              <input type="text" name="nome_da_mae" required [(ngModel)]="preCadastro.nomeDaMae" pInputText/>
               <label>Nome Da Mãe</label>
             </span>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <span class="md-inputfield">
-              <p-calendar name="data_de_nascimento" required [(ngModel)]="preCadastro.data_de_nascimento" dateFormat="dd/mm/yy"></p-calendar>
+                    </div>
+                    <div class="ui-g-12 ui-md-6">
+                        <span class="md-inputfield">
+              <p-calendar name="data_de_nascimento" required [(ngModel)]="preCadastro.dataDeNascimento" dateFormat="dd/mm/yy"></p-calendar>
               <label>Data De Nascimento</label>
             </span>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <span class="md-inputfield">
-              <input type="text" name="n_cartao_sus" minlength="15" maxlength="15" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;" [(ngModel)]="preCadastro.n_cartao_sus" pInputText/>
+                    </div>
+                    <div class="ui-g-12 ui-md-6">
+                        <span class="md-inputfield">
+              <input type="text" name="n_cartao_sus" minlength="15" maxlength="15" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;" [(ngModel)]="preCadastro.numCartaoSus" pInputText/>
               <label>Número do Cartao do SUS</label>
             </span>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-              <div class="ui-g">
-                <div class="ui-g-12 ui-md-2">
-                  <label>Ativo</label>
-              </div>
-              <div class="ui-g-12 ui-md-2">
-                <p-radioButton name="ativo" required [value]="true" label="Sim" [(ngModel)]="preCadastro.ativo"></p-radioButton>
-              </div>
-              <div class="ui-g-12 ui-md-2">
-                <p-radioButton name="ativo" required [value]="false" label="Não" [(ngModel)]="preCadastro.ativo"></p-radioButton>
-              </div>
-            </div>
-          </div>
+                    </div>
+                    <div class="ui-g-12 ui-md-6">
+                        <div class="ui-g">
+                            <div class="ui-g-12 ui-md-2">
+                                <label>Ativo</label>
+                            </div>
+                            <div class="ui-g-12 ui-md-2">
+                                <p-radioButton name="ativo" required [value]="true" label="Sim" [(ngModel)]="preCadastro.ativo"></p-radioButton>
+                            </div>
+                            <div class="ui-g-12 ui-md-2">
+                                <p-radioButton name="ativo" required [value]="false" label="Não" [(ngModel)]="preCadastro.ativo"></p-radioButton>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ui-g">
+                    <div class="ui-g-12 ui-md-2">
+                        <button pButton type="button" label="Cancelar" routerLink="/preCadastro"></button>
+                    </div>
+                    <div class="ui-g-12 ui-md-2">
+                        <button pButton type="submit" label="Salvar" [disabled]="editForm.form.invalid || isSaving"></button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="ui-g">
-          <div class="ui-g-12 ui-md-2">
-            <button pButton type="button" label="Cancelar" routerLink="/preCadastro"></button>
-          </div>
-          <div class="ui-g-12 ui-md-2">
-            <button pButton type="submit" label="Salvar" [disabled]="editForm.form.invalid || isSaving" ></button>
-          </div>
-        </div>
-      </form>
     </div>
-  </div>
 </div>
