--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar.component.html
@@ -1,52 +1,51 @@
 <div class="ui-g ui-fluid">
-  <div class="ui-g-12">
-    <div class="card card-w-title">
-       
-       
-       
-      <h1>Unidade Hospitalares</h1>
-      <div class="ui-g">
-        <div class="ui-g-12 ui-md-12">
-            <span class="md-inputfield">
+    <div class="ui-g-12">
+        <div class="card card-w-title">
+
+
+
+            <h1>Unidade Hospitalares</h1>
+            <div class="ui-g">
+                <div class="ui-g-12 ui-md-12">
+                    <span class="md-inputfield">
               <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
               (keyup.enter)="datatable.refresh(elasticQuery.query)" />
               <label>Pesquisar</label>
             </span>
+                </div>
+                <div class="ui-g-12 ui-md-3"></div>
+                <div class="ui-g-12 ui-md-6">
+                    <div class="ui-g-12 ui-md-6">
+                        <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(elasticQuery.query)"></button>
+                    </div>
+                    <div class="ui-g-12 ui-md-6">
+                        <button pButton type="button" label="Cadastrar" routerLink="/unidadeHospitalar/new" icon="ui-icon-add"></button>
+                    </div>
+                </div>
+                <div class="ui-g-12 ui-md-3"></div>
+                <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)" #datatable>
+                    <p-column header="Logo" field="logo"></p-column>
+                    <p-column header="Sigla" field="sigla"></p-column>
+                    <p-column header="Nome" field="nome"></p-column>
+                    <p-column header="Cnpj" field="cnpj"></p-column>
+                    <p-column header="Endereco" field="endereco"></p-column>
+                    <p-column header="Ativo" field="ativo">
+                        <ng-template let-col let-ativo="rowData" pTemplate="body">
+                            {{ ativo[col.field] ? 'Sim' : (ativo[col.field] != null ? 'Não' : null) }}
+                        </ng-template>
+                    </p-column>
+                </basis-datatable>
+                <div class="ui-g-12 ui-md-2">
+                    <app-botoes-exportacao resourceName="unidadehospitalar"></app-botoes-exportacao>
+                </div>
+            </div>
+
         </div>
-        <div class="ui-g-12 ui-md-3"></div>
-        <div class="ui-g-12 ui-md-6">
-          <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search"  (click)="datatable.refresh(elasticQuery.query)"></button>
-          </div>
-          <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Cadastrar" routerLink="/unidadeHospitalar/new" icon="ui-icon-add"></button>
-          </div>
-        </div>
-        <div class="ui-g-12 ui-md-3"></div>
-        <basis-datatable [url]="searchUrl" 
-          (buttonClick)="datatableClick($event)" #datatable>
-          <p-column header="Logo" field="logo"></p-column>
-          <p-column header="Sigla" field="sigla"></p-column>
-          <p-column header="Nome" field="nome"></p-column>
-          <p-column header="Cnpj" field="cnpj"></p-column>
-          <p-column header="Endereco" field="endereco"></p-column>
-          <p-column header="Ativo" field="ativo">
-            <ng-template let-col let-ativo="rowData" pTemplate="body">
-              {{ ativo[col.field] ? 'Sim' : (ativo[col.field] != null ? 'Não' : null) }}
-            </ng-template>
-          </p-column>
-        </basis-datatable>
-        <div class="ui-g-12 ui-md-2">
-          <app-botoes-exportacao resourceName="Exportar"></app-botoes-exportacao>
-        </div>
-      </div>
-      
     </div>
-  </div>
 </div>
 <p-confirmDialog header="Confirmação" #dialog>
-  <p-footer>
-    <button type="button" pButton icon="fa-close" label="Não" (click)="dialog.reject()"></button>
-    <button type="button" pButton icon="fa-check" label="Sim" (click)="dialog.accept()"></button>
-  </p-footer>
+    <p-footer>
+        <button type="button" pButton icon="fa-close" label="Não" (click)="dialog.reject()"></button>
+        <button type="button" pButton icon="fa-check" label="Sim" (click)="dialog.accept()"></button>
+    </p-footer>
 </p-confirmDialog>
