--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
@@ -8,7 +8,16 @@
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
        
-    
+              <h3 class="first">Logo</h3>
+              <p-fileUpload name="demo[]" url="./upload.php" 
+                      accept="image/*" maxFileSize="1000000">
+                  <ng-template pTemplate="content">
+                      <ul>
+                          <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+                      </ul>
+                  </ng-template>        
+              </p-fileUpload>
+              
      
                 </span>
           </div>
@@ -27,7 +36,7 @@
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="cnpj" id="text-input" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="14" minlength="14" pattern="[0-9]+$" required/>
+              <input type="text" name="cnpj" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="14" minlength="14" pattern="[0-9]+$" required/>
               <label>Cnpj</label>
             </span>
           </div>
