--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-detail.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-detail.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nome" pInputText [ngModel]="unidadeHospitalar.nome" readonly/>
+            <input type="text" name="nome" pInputText mask="99.999.999/9999-99" [ngModel]="unidadeHospitalar.nome" readonly/>
             <label>Nome</label>
           </span>
         </div>
